<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_trans"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialog_back"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/car_filter_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/car_title_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="8dp"
                android:text="@string/mark"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/car_filter_mark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/car_title_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="8dp"
                android:text="@string/model"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/car_filter_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="8dp"
                android:text="@string/year"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/car_filter_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxEms="4"
                android:maxLength="4"
                android:background="@android:color/white"
                android:inputType="number"
                android:padding="10dp"
                android:text="2000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="8dp"
                android:text="@string/yearLater"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/car_filter_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_but"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/search_title"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_search" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>