<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@android:color/white"
  xmlns:app="http://schemas.android.com/apk/res/mn.ismartdev.mcar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/com_slider"
            android:layout_width="match_parent"
            app:auto_cycle="false"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <mn.ismartdev.text.Light
                android:id="@+id/com_det_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/mainColor"
                android:textSize="12sp" />

            <mn.ismartdev.text.Bold
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_back"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/contact"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <mn.ismartdev.text.Regular
                android:id="@+id/com_det_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/mainColor"
                android:textSize="12sp" />

            <mn.ismartdev.text.Bold
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_back"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/phone"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <mn.ismartdev.text.Regular
                android:id="@+id/com_det_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/mainColor"
                android:textSize="12sp" />

            <mn.ismartdev.text.Bold
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_back"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/address"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <mn.ismartdev.text.Regular
                android:id="@+id/com_det_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/mainColor"
                android:textSize="12sp" />

            <mn.ismartdev.text.Bold
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_back"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/googlemap"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="com.google.android.gms.maps.SupportMapFragment" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>